# types-s3transfer

./: .pre-commit-config.yaml  MANIFEST.in  README.md  istub.yml  pyproject.toml  stubcheck.yml  test.py
.github/workflows/: on_push.yml  on_release.yml  on_timer_check.yml  publish_on_update.yml
s3transfer-stubs/: __init__.pyi  bandwidth.pyi  compat.pyi  constants.pyi  copies.pyi  crt.pyi  delete.pyi  download.pyi  exceptions.pyi  futures.pyi  manager.pyi  processpool.pyi  subscribers.pyi  tasks.pyi  upload.pyi  utils.pyi
scripts/: before_commit.sh  open.sh
